--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                         </div>
                     </div>
                     <div class="sb-sidenav-footer">
-                        Welcome RaiderVet!
+                       <font color="red"> Welcome RaiderVet! </font>
                     </div>
                 </nav>
             </div>
