--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
                                         <nav class="sb-sidenav-menu-nested nav">
                                             <a class="nav-link" href="login.html">Using E-Value</a>
                                             <a class="nav-link" href="register.html">Accessing Library</a>
-                                            <a class="nav-link" href="password.html">Resetting Eraider</a>
-                                             <a class="nav-link" href="password.html">IT Helpdesk</a>
+                                            <a class="nav-link" href="https://eraider.ttu.edu/">Resetting Eraider</a>
+                                             <a class="nav-link" href="https://askit.ttu.edu/sp">IT Helpdesk</a>
                                         </nav>
                                     </div>
                                     <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#pagesCollapseError" aria-expanded="false" aria-controls="pagesCollapseError">
@@ -76,15 +76,15 @@
                                 </nav>
                             </div>
                             <div class="sb-sidenav-menu-heading">LINKS</div>
-                            <a class="nav-link" href="charts.html">
+                            <a class="nav-link" href="https://www.depts.ttu.edu/vetschool/" target="https://www.depts.ttu.edu/vetschool/">
                                 <div class="sb-nav-link-icon"><i class="fas fa-chart-area"></i></div>
                                SVM Main Webpage
                             </a>
-                            <a class="nav-link" href="tables.html">
+                            <a class="nav-link" href="https://www.depts.ttu.edu/vetschool/" target="https://www.depts.ttu.edu/vetschool/">
                                 <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
                                 Library
                             </a>
-                             <a class="nav-link" href="charts.html">
+                             <a class="nav-link" href="https://www.depts.ttu.edu/vetschool/" target="https://www.depts.ttu.edu/vetschool/">
                                 <div class="sb-nav-link-icon"><i class="fas fa-chart-area"></i></div>
                                E-Value
                             </a>
