--- a/index.html
+++ b/index.html
@@ -140,7 +140,71 @@
                                 </div>
                             </div>
                         </div>
-                       
+                                               <div class="card mb-4">
+                            <div class="card-header">
+                                <i class="fas fa-table me-1"></i>
+                               Contact Information
+                            </div>
+                            <div class="card-body">
+                                <table id="datatablesSimple">
+                                    <thead>
+                                        <tr>
+                                            <th>Role</th>
+                                            <th>Name</th>
+                                            <th>Phone</th>
+                                            <th>Email</th>
+
+                                        </tr>
+                                    </thead>
+                                    <tfoot>
+                                        <tr>
+                                            <th>Role</th>
+                                            <th>Name</th>
+                                            <th>Phone</th>
+                                            <th>Email</th>
+
+                                        </tr>
+                                    </tfoot>
+                                    <tbody>
+                                        <tr>
+                                            <td>Associate Dean of Clinical Programs</td>
+                                            <td>Britt Conklin, DVM</td>
+                                            <td>806-555-1212</td>
+                                            <td>email address</td>
+
+                                        </tr>
+                                        <tr>
+                                            <td>Director of Clinical Programs</td>
+                                            <td>Nancy Zimmerman, DVM, MS, DACVS</td>
+                                            <td>806-555-1212</td>
+                                            <td>email address</td>
+
+                                        </tr>
+                                        <tr>
+                                            <td>Clinical Coordinator</td>
+                                            <td>David Dutton, DVM, DACVS</td>
+                                            <td>806-555-1212</td>
+                                            <td>email address</td>
+
+                                        </tr>
+                                        <tr>
+                                            <td>Network Program Manager</td>
+                                            <td>Danelle Barber</td>
+                                            <td>806-555-1212</td>
+                                            <td>email address</td>
+
+                                        </tr>
+                                        <tr>
+                                            <td>Student Program Manager</td>
+                                            <td>Gala Beals</td>
+                                            <td>806-555-1212</td>
+                                            <td>email address</td>
+
+                                        </tr>
+                                       
+                                    </tbody>
+                                </table>
+                            </div>
                         <div class="card mb-4">
                             <div class="card-header">
                                 <i class="fas fa-table me-1"></i>
