--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                                 </div>
                             </div>
                         </div>
-                                               <div class="card mb-4">
+                        <div class="card mb-4">
                             <div class="card-header">
                                 <i class="fas fa-table me-1"></i>
                                Contact Information
@@ -149,6 +149,7 @@
                                 <table id="datatablesSimple">
                                     <thead>
                                         <tr>
+                                            <th>Picture</th>
                                             <th>Role</th>
                                             <th>Name</th>
                                             <th>Phone</th>
@@ -158,6 +159,7 @@
                                     </thead>
                                     <tfoot>
                                         <tr>
+                                            <th>Picture</th>
                                             <th>Role</th>
                                             <th>Name</th>
                                             <th>Phone</th>
@@ -167,6 +169,7 @@
                                     </tfoot>
                                     <tbody>
                                         <tr>
+                                            <td><img src="/images/Britt.png" class="img-fluid" alt="Responsive image"></td>
                                             <td>Associate Dean of Clinical Programs</td>
                                             <td>Britt Conklin, DVM</td>
                                             <td>806-555-1212</td>
@@ -174,6 +177,7 @@
 
                                         </tr>
                                         <tr>
+                                       <td><img src="/images/Britt.png" class="img-thumbnail" alt="Responsive image"></td>
                                             <td>Director of Clinical Programs</td>
                                             <td>Nancy Zimmerman, DVM, MS, DACVS</td>
                                             <td>806-555-1212</td>
@@ -181,6 +185,7 @@
 
                                         </tr>
                                         <tr>
+                                            <td><img src="/images/Britt.png" width=100%></td>
                                             <td>Clinical Coordinator</td>
                                             <td>David Dutton, DVM, DACVS</td>
                                             <td>806-555-1212</td>
@@ -188,6 +193,7 @@
 
                                         </tr>
                                         <tr>
+                                           <td><img src="/images/Britt.png" width=100%></td>
                                             <td>Network Program Manager</td>
                                             <td>Danelle Barber</td>
                                             <td>806-555-1212</td>
@@ -195,6 +201,7 @@
 
                                         </tr>
                                         <tr>
+                                            <td><img src="/images/Britt.png" width=100%></td>
                                             <td>Student Program Manager</td>
                                             <td>Gala Beals</td>
                                             <td>806-555-1212</td>
