--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                                     </tfoot>
                                     <tbody>
                                         <tr>
-                                            <td><img src="/images/britt.jpeg" class="img-fluid" alt="Responsive image"></td>
+                                            <td><img src="assets/img/britt.jpeg" class="img-fluid" alt="Responsive image"></td>
                                             <td>Associate Dean of Clinical Programs</td>
                                             <td>Britt Conklin, DVM</td>
                                             <td>806-555-1212</td>
@@ -177,7 +177,7 @@
 
                                         </tr>
                                         <tr>
-                                       <td><img src="/images/britt.jpeg" class="img-thumbnail" alt="Responsive image"></td>
+                                       <td><img src="assets/img/britt.jpeg" class="img-thumbnail" alt="Responsive image"></td>
                                             <td>Director of Clinical Programs</td>
                                             <td>Nancy Zimmerman, DVM, MS, DACVS</td>
                                             <td>806-555-1212</td>
@@ -185,7 +185,7 @@
 
                                         </tr>
                                         <tr>
-                                            <td><img src="/images/britt.jpeg" width=100%></td>
+                                            <td><img src="assets/img/britt.jpeg" width=100%></td>
                                             <td>Clinical Coordinator</td>
                                             <td>David Dutton, DVM, DACVS</td>
                                             <td>806-555-1212</td>
@@ -193,7 +193,7 @@
 
                                         </tr>
                                         <tr>
-                                           <td><img src="/images/britt.jpeg" width=100%></td>
+                                           <td><img src="assets/img/britt.jpeg" width=100%></td>
                                             <td>Network Program Manager</td>
                                             <td>Danelle Barber</td>
                                             <td>806-555-1212</td>
@@ -201,7 +201,7 @@
 
                                         </tr>
                                         <tr>
-                                            <td><img src="/images/britt.jpeg" width=100%></td>
+                                            <td><img src="assets/img/britt.jpeg" width=100%></td>
                                             <td>Student Program Manager</td>
                                             <td>Gala Beals</td>
                                             <td>806-555-1212</td>
