--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                                     </tbody>
                                 </table>
                             </div>
-                        </div>
+                        </div></div>
                         <div class="card mb-4">
                             <div class="card-header">
                                 <i class="fas fa-table me-1"></i>
