--- a/index.html
+++ b/index.html
@@ -212,10 +212,10 @@
                                     </tbody>
                                 </table>
                             </div>
-                        </div></div>
+                        </div>
                         <div class="card mb-4">
                             <div class="card-header">
-                                <i class="fas fa-table me-1"></i>
+                                <i class="fas fa-table me-2"></i>
                                School Holidays and Events
                             </div>
                             <div class="card-body">
