--- a/index2.html
+++ b/index2.html
@@ -12,7 +12,7 @@
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
     </head>
     <body class="sb-nav-fixed">
-<nav class="navbar bg-body-tertiary fixed-top">
+<nav class="navbar navbar-dark bg-light fixed-top">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">
 <img src="assets/img/svm.svg" width=75%> </a>
