--- a/index2.html
+++ b/index2.html
@@ -14,7 +14,7 @@
     <body class="sb-nav-fixed">
 <nav class="navbar bg-light fixed-top">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#"> <img src="assets/img/svm-brand.svg" alt="Logo" width="auto" height="50" class="d-inline-block align-text-top"> Professional Partners</a>
+    <a class="navbar-brand" href="#"> <img src="assets/img/svm-brand.svg" alt="Logo" width="auto" height="35" class="d-inline-block align-text-center"> Professional Partners</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
