--- a/index2.html
+++ b/index2.html
@@ -14,13 +14,13 @@
     <body class="sb-nav-fixed">
 <nav class="navbar bg-light fixed-top">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#"> <img src="assets/img/svm-brand.svg" alt="Logo" width="auto" height="50" class="d-inline-block align-text-center"> Professional Partners</a>
+    <a class="navbar-brand" href="#" class="mt-4"> <img src="assets/img/svm-brand.svg" alt="Logo" width="auto" height="50" class="d-inline-block align-text-center"> Professional Partners</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
       <div class="offcanvas-header">
-        <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Offcanvas</h5>
+        <h5 class="offcanvas-title" id="offcanvasNavbarLabel">SVM Professional Partners</h5>
         <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
       </div>
       <div class="offcanvas-body">
