--- a/branded.html
+++ b/branded.html
@@ -22,7 +22,7 @@
 		var mtiTracking = document.createElement('script');
 		mtiTracking.type = 'text/javascript';
 		mtiTracking.async = 'true';
-		mtiTracking.src = '/_ttu-template/2017/js/mtiFontTrackingCode.js';
+		mtiTracking.src = 'https://www.ttu.edu/_ttu-template/2017/js/mtiFontTrackingCode.js';
 		(document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(mtiTracking);
 	})();
 </script>
@@ -165,7 +165,7 @@ ga('ttuTracker.send', 'pageview');
    </div>
    <!-- Page Header Navigation = = = = = = = = = = = = = = = = = = = = = = = = = -->
    <header class="ttu-main-header" id="nav">
-      <div class="logo__lockup"><a class="ttu-logo" href="http://www.ttu.edu/"><img src="/_ttu-template/2017/img/dbl__T.svg" alt="Texas Tech University Double T" width="5%" height="5%"></a><h1>TEXAS TECH UNIVERSITY</h1>
+      <div class="logo__lockup"><a class="ttu-logo" href="http://www.ttu.edu/"><img src="https://www.ttu.edu/_ttu-template/2017/img/dbl__T.svg" alt="Texas Tech University Double T" width="5%" height="5%"></a><h1>TEXAS TECH UNIVERSITY</h1>
       </div><ul class="ttu-header-buttons">
 	<li><a class="ttu-nav-trigger" href="#ttu-primary-nav">Menu<span></span></a></li>
 	<li><a class="ttu-search-trigger mobile-search" href="#ttu-search">Search<span></span></a></li>
