--- a/branded.html
+++ b/branded.html
@@ -79,7 +79,7 @@
 		display: inline-block;
 		white-space: nowrap;
 		z-index: 3;
-		background: url("/_ttu-template/2017/img/google-translate.svg") no-repeat left center ;
+		background: url("https://www.ttu.edu/_ttu-template/2017/img/google-translate.svg") no-repeat left center ;
 		width: 24px;
 		height: 44px;
 		overflow: hidden;
@@ -178,10 +178,10 @@ ga('ttuTracker.send', 'pageview');
          <ul class="breadcrumbs">
             
             <li class="breadcrumbs-item"><a href="http://www.ttu.edu/" class="text-center icon-home">TTU</a></li> 
-            <li class="breadcrumbs-item test"><a href="/webguidelines/">Web Guidelines</a></li> 
-            <li class="breadcrumbs-item test"><a href="/webguidelines/publishing/">Web Site Publishing</a></li> 
-            <li class="breadcrumbs-item test"><a href="/webguidelines/publishing/examples/">Template Examples</a></li> 
-            <li class="breadcrumbs-item test"><a href="/webguidelines/publishing/examples/standard/">Standard</a></li> 
+            <li class="breadcrumbs-item test"><a href="https://www.ttu.eduhttps://www.ttu.eduhttps://www.ttu.eduhttps://www.ttu.edu/webguidelines/">Web Guidelines</a></li> 
+            <li class="breadcrumbs-item test"><a href="https://www.ttu.eduhttps://www.ttu.eduhttps://www.ttu.edu/webguidelines/publishing/">Web Site Publishing</a></li> 
+            <li class="breadcrumbs-item test"><a href="https://www.ttu.eduhttps://www.ttu.edu/webguidelines/publishing/examples/">Template Examples</a></li> 
+            <li class="breadcrumbs-item test"><a href="https://www.ttu.edu/webguidelines/publishing/examples/standard/">Standard</a></li> 
          </ul>
       </section>
       <!-- End Breadcrumbs = = = = = = = = = = = = = = = = = = = = = = = -->
@@ -633,9 +633,9 @@ ga('ttuTracker.send', 'pageview');
 		<input type="search" placeholder="Search..." name="query" aria-label="Search TTU Site" />
 	</form>
 </div>
-<script src="/_ttu-template/2017/js/classie.js"></script> 
-<script src="/_ttu-template/2017/js/main.js"></script> 
-<script src="/_ttu-template/2017/js/stickykit.js"></script> 
+<script src="https://www.ttu.edu/_ttu-template/2017/js/classie.js"></script> 
+<script src="https://www.ttu.edu/_ttu-template/2017/js/main.js"></script> 
+<script src="https://www.ttu.edu/_ttu-template/2017/js/stickykit.js"></script> 
 <script>
     $("#nav").stick_in_parent({
         bottoming: false
