--- a/svm-template.html
+++ b/svm-template.html
@@ -176,7 +176,7 @@
          display: inline-block;
          white-space: nowrap;
          z-index: 3;
-         background: url("/https://www.ttu.edu_ttu-template/2017/img/google-translate.svg") no-repeat left center ;
+         background: url("https://www.ttu.edu/_ttu-template/2017/img/google-translate.svg") no-repeat left center ;
          width: 24px;
          height: 44px;
          overflow: hidden;
@@ -222,7 +222,7 @@
          
          var site_has_own_hostname="no";
       </script>																																																																																																									  																																																																																																						   
-      <link rel="stylesheet" href="https://www.ttu.edu/vetschool/includes/stylesheets/styles.css" media="all" />
+      <link rel="stylesheet" href="https://www.ttu.edu/vetschool/vetschool/includes/stylesheets/styles.css" media="all" />
       <style>
          .breadcrumb {
          display: none;
@@ -899,9 +899,9 @@
             <input type="search" placeholder="Search..." name="query" aria-label="Search TTU Site" />
          </form>
       </div>
-      <script src="/_ttu-template/2017/js/classie.js"></script> 
-      <script src="/_ttu-template/2017/js/main.js"></script> 
-      <script src="/_ttu-template/2017/js/stickykit.js"></script> 
+      <script src="https://www.ttu.edu/_ttu-template/2017/js/classie.js"></script> 
+      <script src="https://www.ttu.edu/_ttu-template/2017/js/main.js"></script> 
+      <script src="https://www.ttu.edu/_ttu-template/2017/js/stickykit.js"></script> 
       <script>
          $("#nav").stick_in_parent({
              bottoming: false
