--- a/svm-template.html
+++ b/svm-template.html
@@ -333,6 +333,7 @@
             </div>
          </section>
       </section>
+      </main>
       <!-- End Main Content = = = = = = = = = = = = = = = = = = = = = -->
             <!-- ADD MAIN CONTENT ABOVE THIS LINE -->
          </section>
