--- a/svm-template.html
+++ b/svm-template.html
@@ -9,23 +9,23 @@
       <meta name="apple-mobile-web-app-status-bar-style" content="#cc0000">
       <meta name="apple-mobile-web-app-capable" content="yes">
       <title>School of Veterinary Medicine | School of Veterinary Medicine  | TTU</title>
-      <link rel="stylesheet" href="https://www.ttu.edu/_ttu-template/2017/css/style.min.css?20170830" media="all" />
-      <link rel="shortcut icon" href="https://www.ttu.edu/_ttu-template/2017/img/favicon.ico" type="image/x-icon" />
-      <link rel="icon" href="https://www.ttu.edu/_ttu-template/2017/img/favicon.ico" type="image/x-icon" />
-      <script src="https://www.ttu.edu/_ttu-template/2017/js/jquery-2.1.1.js"></script> 
-      <script src="https://www.ttu.edu/_ttu-template/2017/js/jquery.mobile.custom.min.js"></script> 
+      <link rel="stylesheet" href="/_ttu-template/2017/css/style.min.css?20170830" media="all" />
+      <link rel="shortcut icon" href="/_ttu-template/2017/img/favicon.ico" type="image/x-icon" />
+      <link rel="icon" href="/_ttu-template/2017/img/favicon.ico" type="image/x-icon" />
+      <script src="/_ttu-template/2017/js/jquery-2.1.1.js"></script> 
+      <script src="/_ttu-template/2017/js/jquery.mobile.custom.min.js"></script> 
       <script type="text/javascript">
          var MTIProjectId = '76d1bfe1-39f8-4fc4-9202-23ddf5addb92';
          (function() {
          	var mtiTracking = document.createElement('script');
          	mtiTracking.type = 'text/javascript';
          	mtiTracking.async = 'true';
-         	mtiTracking.src = 'https://www.ttu.edu/_ttu-template/2017/js/mtiFontTrackingCode.js';
+         	mtiTracking.src = '/_ttu-template/2017/js/mtiFontTrackingCode.js';
          	(document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(mtiTracking);
          })();
       </script>
-      <script src="https://www.ttu.edu/_ttu-template/2017/js/modernizr.js"></script>
-      <script src="https://www.ttu.edu/_ttu-template/2017/js/scroll.js"></script>
+      <script src="/_ttu-template/2017/js/modernizr.js"></script>
+      <script src="/_ttu-template/2017/js/scroll.js"></script>
       <script>function googleTranslateElementInit() {new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');}</script><script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
       <script>
          $(function() {
@@ -73,7 +73,7 @@
          display: inline-block;
          white-space: nowrap;
          z-index: 3;
-         background: url("https://www.ttu.edu/_ttu-template/2017/img/google-translate.svg") no-repeat left center ;
+         background: url("/_ttu-template/2017/img/google-translate.svg") no-repeat left center ;
          width: 24px;
          height: 44px;
          overflow: hidden;
@@ -141,13 +141,13 @@
          margin: 0;
          min-height: 100%;
          background-color: #fff;
-         font-family:" 'ITC Charter W01',Georgia,Garamond,serif;";src:url("https://www.ttu.edu/_ttu-template/2017/fonts/ba84e803-3903-4d83-bec4-16b23ae8ad1d.eot?#iefix";
+         font-family:" 'ITC Charter W01',Georgia,Garamond,serif;";src:url("/_ttu-template/2017/fonts/ba84e803-3903-4d83-bec4-16b23ae8ad1d.eot?#iefix";
          font-size: 14px;
          line-height: 20px;
          color: #333;
          }
          .text-block-26 {
-         font-family:"ITC Charter W01_i4";src:url("https://www.ttu.edu/_ttu-template/2017/fonts/ba84e803-3903-4d83-bec4-16b23ae8ad1d.eot?#iefix";																																																				  																											font-size: 33px;								  																											text-transform: uppercase;
+         font-family:"ITC Charter W01_i4";src:url("/_ttu-template/2017/fonts/ba84e803-3903-4d83-bec4-16b23ae8ad1d.eot?#iefix";																																																				  																											font-size: 33px;								  																											text-transform: uppercase;
          }																																				
          div#translateWrapper {
          display:none;
@@ -176,7 +176,7 @@
          display: inline-block;
          white-space: nowrap;
          z-index: 3;
-         background: url("https://www.ttu.edu/_ttu-template/2017/img/google-translate.svg") no-repeat left center ;
+         background: url("/_ttu-template/2017/img/google-translate.svg") no-repeat left center ;
          width: 24px;
          height: 44px;
          overflow: hidden;
@@ -222,7 +222,7 @@
          
          var site_has_own_hostname="no";
       </script>																																																																																																									  																																																																																																						   
-      <link rel="stylesheet" href="https://www.ttu.edu/vetschool/vetschool/includes/stylesheets/styles.css" media="all" />
+      <link rel="stylesheet" href="/vetschool/includes/stylesheets/styles.css" media="all" />
       <style>
          .breadcrumb {
          display: none;
@@ -253,9 +253,9 @@
          }
          }
       </style>
-      <link href="https://www.ttu.edu/vetschool/buck/css/tt-vet-school.webflow.css" rel="stylesheet" type="text/css">
-      <link href="https://www.ttu.edu/vetschool/buck/css/webflow.css" rel="stylesheet" type="text/css">
-      <link href="https://www.ttu.edu/vetschool/buck/css/normalize.css" rel="stylesheet" type="text/css">
+      <link href="/vetschool/buck/css/tt-vet-school.webflow.css" rel="stylesheet" type="text/css">
+      <link href="/vetschool/buck/css/webflow.css" rel="stylesheet" type="text/css">
+      <link href="/vetschool/buck/css/normalize.css" rel="stylesheet" type="text/css">
    </head>
    <body>
       <!-- Main-header Logo Links = = = = = = = = = = = = = = = = = = = = = = = = = -->
@@ -274,7 +274,7 @@
       <!-- Page Header Navigation = = = = = = = = = = = = = = = = = = = = = = = = = -->
       <header class="ttu-main-header" id="nav">
          <div class="logo__lockup">
-            <a class="ttu-logo" href="https://www.depts.ttu.edu/vetschool/"><img src="https://www.ttu.edu/_ttu-template/2017/img/dbl__T.svg" alt="Texas Tech University Double T" width="5%" height="5%"></a>
+            <a class="ttu-logo" href="https://www.depts.ttu.edu/vetschool/"><img src="/_ttu-template/2017/img/dbl__T.svg" alt="Texas Tech University Double T" width="5%" height="5%"></a>
             <h1> School <em>of</em> Veterinary Medicine </h1>
          </div>
          <ul class="ttu-header-buttons">
@@ -899,9 +899,9 @@
             <input type="search" placeholder="Search..." name="query" aria-label="Search TTU Site" />
          </form>
       </div>
-      <script src="https://www.ttu.edu/_ttu-template/2017/js/classie.js"></script> 
-      <script src="https://www.ttu.edu/_ttu-template/2017/js/main.js"></script> 
-      <script src="https://www.ttu.edu/_ttu-template/2017/js/stickykit.js"></script> 
+      <script src="/_ttu-template/2017/js/classie.js"></script> 
+      <script src="/_ttu-template/2017/js/main.js"></script> 
+      <script src="/_ttu-template/2017/js/stickykit.js"></script> 
       <script>
          $("#nav").stick_in_parent({
              bottoming: false
