--- a/branded.html
+++ b/branded.html
@@ -9,7 +9,7 @@
    <meta name="theme-color" content="#cc0000">
    <meta name="apple-mobile-web-app-status-bar-style" content="#cc0000">
    <meta name="apple-mobile-web-app-capable" content="yes">
-   <title>Standard | Template Examples | Web Site Publishing | Web Guidelines | TTU</title>
+   <title>TTU SVM | Professional Partners</title>
    <link rel="stylesheet" href="https://www.ttu.edu/_ttu-template/2017/css/style.min.css?20170830" media="all" />
 <link rel="shortcut icon" href="https://www.ttu.edu/_ttu-template/2017/img/favicon.ico" type="image/x-icon" />
 <link rel="icon" href="https://www.ttu.edu/_ttu-template/2017/img/favicon.ico" type="image/x-icon" />
@@ -165,7 +165,8 @@ ga('ttuTracker.send', 'pageview');
    </div>
    <!-- Page Header Navigation = = = = = = = = = = = = = = = = = = = = = = = = = -->
    <header class="ttu-main-header" id="nav">
-      <div class="logo__lockup"><a class="ttu-logo" href="http://www.ttu.edu/"><img src="https://www.ttu.edu/_ttu-template/2017/img/dbl__T.svg" alt="Texas Tech University Double T" width="5%" height="5%"></a><h1>TEXAS TECH UNIVERSITY</h1>
+      <div class="logo__lockup"><a class="ttu-logo" href="http://www.ttu.edu/"><img src="https://www.ttu.edu/_ttu-template/2017/img/dbl__T.svg" alt="Texas Tech University Double T" width="5%" height="5%"></a>            
+	      <h1> School <em>of</em> Veterinary Medicine </h1>
       </div><ul class="ttu-header-buttons">
 	<li><a class="ttu-nav-trigger" href="#ttu-primary-nav">Menu<span></span></a></li>
 	<li><a class="ttu-search-trigger mobile-search" href="#ttu-search">Search<span></span></a></li>
