--- a/branded.html
+++ b/branded.html
@@ -225,6 +225,83 @@ ga('ttuTracker.send', 'pageview');
          </section>
       </section>
       <!-- End Main Content = = = = = = = = = = = = = = = = = = = = = -->
+	            <section class="l-contact">
+            <div class="c-contactinfo__container">
+               <div class="c-contactinfo__title">
+                  <h1> School <em>of</em> Veterinary Medicine </h1>
+               </div>
+               <div class="c-contactinfo__social">
+                  <ul>
+                     <li>
+                        <a href="https://www.facebook.com/TTUVetMed">
+                           <svg version="1.1" role="img" aria-labelledby="title_facebook desc_facebook" x="0px" y="0px" viewBox="0 0 485 485" enableBackground="new 0 0 485 485" style="width:100%;height:40px;">
+                              <title id="title_facebook">Like School of Veterinary Medicine on Facebook</title>
+                              <desc id="desc_facebook">Like School of Veterinary Medicine on Facebook</desc>
+                              <g>
+                                 <path class="inner-shape" d="M200.8,400H266V242.4h43.8c0,0,4.1-25.4,6.1-53.2h-49.6v-36.3c0-5.4,7.1-12.7,14.2-12.7H316V85h-48.4   c-68.5,0-66.9,53.1-66.9,61v43.4H169v53h31.8L200.8,400L200.8,400z" />
+                                 <path class="outer-shape" d="M0,0v485h485V0H0z M455,455H30V30h425V455z" />
+                              </g>
+                           </svg>
+                        </a>
+                     </li>
+                     <li>
+                        <a href="https://twitter.com/TTUVetMed">
+                           <svg version="1.1" role="img" aria-labelledby="title_twitter desc_twitter" x="0px" y="0px" viewBox="0 0 485 485" enableBackground="new 0 0 485 485" style="width:100%;height:40px;">
+                              <title id="title_twitter">Follow School of Veterinary Medicine on twitter</title>
+                              <desc id="desc_twitter">Follow School of Veterinary Medicine on twitter</desc>
+                              <g>
+                                 <path class="inner-shape" d="M85,341.5c28.6,18.3,62.6,29,99.1,29c118.9,0,183.9-98.5,183.9-183.9c0-2.8-0.1-5.6-0.2-8.4c12.6-9.1,23.6-20.5,32.2-33.5   c-11.6,5.1-24,8.6-37.1,10.2c13.3-8,23.6-20.7,28.4-35.8c-12.5,7.4-26.3,12.8-41,15.7c-11.8-12.6-28.6-20.4-47.2-20.4   c-35.7,0-64.6,28.9-64.6,64.6c0,5.1,0.6,10,1.7,14.7c-53.7-2.7-101.3-28.4-133.2-67.5c-5.6,9.5-8.8,20.6-8.8,32.5   c0,22.4,11.4,42.2,28.7,53.8c-10.6-0.3-20.6-3.2-29.3-8.1c0,0.3,0,0.5,0,0.8c0,31.3,22.3,57.4,51.8,63.4c-5.4,1.5-11.1,2.3-17,2.3   c-4.2,0-8.2-0.4-12.2-1.2c8.2,25.7,32.1,44.4,60.4,44.9c-22.1,17.3-50,27.7-80.3,27.7C95.2,342.4,90.1,342.1,85,341.5z" />
+                                 <path class="outer-shape" d="M0,0v485h485V0H0z M455,455H30V30h425V455z" />
+                              </g>
+                           </svg>
+                        </a>
+                     </li>
+                     <li>
+                        <a href="https://www.youtube.com/channel/UCjidHvh1rChceStPqUzIwmA">
+                           <svg version="1.1" role="img" aria-labelledby="title_youtube desc_youtube" x="0px" y="0px" viewBox="0 0 485 485" enableBackground="new 0 0 485 485" style="width:100%;height:40px;">
+                              <title id="title_youtube">Subscribe to School of Veterinary Medicine on YouTube</title>
+                              <desc id="desc_youtube">Subscribe to School of Veterinary Medicine on YouTube</desc>
+                              <g>
+                                 <path class="inner-shape" d="M124.5,347.9c39.1,4.4,78.6,4.4,117.9,4.4c39.4,0,78.9,0,118-4.4c16.5-1.8,30.2-14.2,34.1-31c5.5-23.8,5.5-49.9,5.5-74.5   s0-50.6-5.4-74.4c-3.9-16.8-17.6-29.1-34.1-31c-39.1-4.4-78.6-4.4-117.9-4.4c-39.4,0-78.9,0-118,4.4c-16.5,1.8-30.2,14.2-34,31   c-5.5,23.8-5.6,49.9-5.6,74.5s0,50.6,5.5,74.5C94.3,333.7,108,346.1,124.5,347.9z M201.9,187.2c33.4,17.4,66.5,34.7,100.1,52.2   c-33.5,17.4-66.7,34.6-100.1,51.9L201.9,187.2L201.9,187.2z" />
+                                 <path class="outer-shape" d="M0,0v485h485V0H0z M455,455H30V30h425V455z" />
+                              </g>
+                           </svg>
+                        </a>
+                     </li>
+                     <li>
+                        <a href="https://www.instagram.com/ttuvetmed/">
+                           <svg version="1.1" role="img" aria-labelledby="title_instagram desc_instagram" x="0px" y="0px" viewBox="0 0 485 485" enableBackground="new 0 0 485 485" style="width:100%;height:40px;">
+                              <title id="title_instagram">Follow School of Veterinary Medicine on Instagram</title>
+                              <desc id="desc_instagram">Follow School of Veterinary Medicine on Instagram</desc>
+                              <g>
+                                 <g class="inner-shape">
+                                    <path d="M320.5,85H164.5C120.7,85,85,120.7,85,164.5v156.1c0,43.8,35.6,79.5,79.5,79.5h156.1c43.8,0,79.4-35.6,79.4-79.5V164.5    C400,120.7,364.3,85,320.5,85z M365.7,320.6c0,24.9-20.3,45.2-45.2,45.2H164.5c-24.9,0-45.2-20.3-45.2-45.2V164.5    c0-24.9,20.3-45.2,45.2-45.2h156.1c24.9,0,45.2,20.3,45.2,45.2V320.6z" />
+                                    <path d="M326.2,178.2c-10.6,0-19.2-8.6-19.2-19.2c0-10.6,8.6-19.2,19.2-19.2c10.6,0,19.2,8.6,19.2,19.2    C345.4,169.6,336.8,178.2,326.2,178.2L326.2,178.2z" />
+                                    <path d="M242.5,161.4c-44.7,0-81.1,36.4-81.1,81.1c0,44.7,36.4,81.1,81.1,81.1c44.7,0,81.1-36.4,81.1-81.1    C323.6,197.8,287.2,161.4,242.5,161.4z M242.5,289.4c-25.8,0-46.8-21-46.8-46.8c0-25.8,21-46.8,46.8-46.8    c25.8,0,46.8,21,46.8,46.8C289.3,268.4,268.3,289.4,242.5,289.4z" />
+                                 </g>
+                                 <path class="outer-shape" d="M0,0v485h485V0H0z M455,455H30V30h425V455z" />
+                              </g>
+                           </svg>
+                        </a>
+                     </li>
+                  </ul>
+               </div>
+               <ul>
+                  <li>
+                     <h3>Address</h3>
+                     <address>7671 Evans Drive, Amarillo, Texas 79106</address>
+                  </li>
+                  <li>
+                     <h3>Phone</h3>
+                     <a href="tel:806.742.3200">806.742.3200</a>
+                  </li>
+                  <li>
+                     <h3>Email</h3>
+                     <a href="mailto:SVM@ttu.edu">SVM@ttu.edu</a>
+                  </li>
+               </ul>
+            </div>
+         </section>
       <!-- CTA Buttons = = = = = = = = = = = = = = = = = = = = = = = = = -->
       <div class="l-cta-bar">
 <div class="c-cta-icons"> <a href="http://www.ttu.edu/about/contact.php" target="_blank"><h4>Contact TTU</h4><svg version="1.1" role="img" aria-labelledby="title_phone desc_phone" x="0px" y="0px" viewBox="0 0 485 485" enableBackground="new 0 0 485 485" style="width:100%;height:80px;"><title id="title_phone">Contact Contact TTU</title><desc id="desc_phone">Contact Contact TTU</desc><g class="inner-shape"><path d="M310.3,411H174.7c-14.4,0-26.1-11.7-26.1-26.1V100.2c0-14.4,11.7-26.1,26.1-26.1h135.6c14.4,0,26.1,11.7,26.1,26.1v284.7   C336.5,399.3,324.7,411,310.3,411z M174.7,91c-5.1,0-9.2,4.1-9.2,9.2v284.7c0,5.1,4.1,9.2,9.2,9.2h135.6c5.1,0,9.2-4.1,9.2-9.2   V100.2c0-5.1-4.1-9.2-9.2-9.2H174.7z" /><path d="M321.9,348.6H163.1c-5.7,0-10.3-4.6-10.3-10.3V126.1c0-5.7,4.6-10.3,10.3-10.3h158.9c5.7,0,10.3,4.6,10.3,10.3v212.2   C332.2,344,327.6,348.6,321.9,348.6z M163.1,124.3c-1,0-1.8,0.8-1.8,1.8v212.2c0,1,0.8,1.8,1.8,1.8h158.9c1,0,1.8-0.8,1.8-1.8   V126.1c0-1-0.8-1.8-1.8-1.8H163.1z" /><path d="M242.5,386.2c-8.9,0-16.2-7.2-16.2-16.2s7.2-16.2,16.2-16.2s16.2,7.2,16.2,16.2S251.4,386.2,242.5,386.2z M242.5,360.2   c-5.4,0-9.8,4.4-9.8,9.8s4.4,9.8,9.8,9.8s9.8-4.4,9.8-9.8S247.9,360.2,242.5,360.2z" /><path d="M261.6,105h-38.1c-1.8,0-3.2-1.4-3.2-3.2s1.4-3.2,3.2-3.2h38.1c1.8,0,3.2,1.4,3.2,3.2S263.3,105,261.6,105z" /></g></svg></a></div>
