--- a/branded.html
+++ b/branded.html
@@ -10,7 +10,7 @@
    <meta name="apple-mobile-web-app-status-bar-style" content="#cc0000">
    <meta name="apple-mobile-web-app-capable" content="yes">
    <title>TTU SVM | Professional Partners</title>
-   <link rel="stylesheet" href="https://www.ttu.edu/_ttu-template/2017/css/style.min.css?20170830" media="all" />
+   <link rel="stylesheet" href="https://www.depts.ttu.edu/_ttu-template/2017/css/style.min.css?20170830" media="all" />
 <link rel="shortcut icon" href="https://www.ttu.edu/_ttu-template/2017/img/favicon.ico" type="image/x-icon" />
 <link rel="icon" href="https://www.ttu.edu/_ttu-template/2017/img/favicon.ico" type="image/x-icon" />
 <script src="https://www.ttu.edu/_ttu-template/2017/js/jquery-2.1.1.js"></script> 
