--- a/branded.html
+++ b/branded.html
@@ -209,10 +209,12 @@ ga('ttuTracker.send', 'pageview');
 		       
 			<blockquote>
 				<ol class="default-list">
-					<li>While viewing the website, tap <svg
+					<li>While viewing the website, tap 
+
+<svg
    version="1.0"
-   width="50.000000pt"
-   height="60.000000pt"
+   width="100%"
+   height="40px"
    viewBox="0 0 50.000000 60.000000"
    preserveAspectRatio="xMidYMid meet"
    id="svg216"
@@ -260,6 +262,18 @@ ga('ttuTracker.send', 'pageview');
        style="fill:#0000ff" />
   </g>
 </svg> in the menu bar.</li>
+					 <svg version="1.1" role="img" aria-labelledby="title_instagram desc_instagram" x="0px" y="0px" viewBox="0 0 485 485" enableBackground="new 0 0 485 485" style="width:100%;height:40px;">
+                              <title id="title_instagram">Follow School of Veterinary Medicine on Instagram</title>
+                              <desc id="desc_instagram">Follow School of Veterinary Medicine on Instagram</desc>
+                              <g>
+                                 <g class="inner-shape">
+                                    <path d="M320.5,85H164.5C120.7,85,85,120.7,85,164.5v156.1c0,43.8,35.6,79.5,79.5,79.5h156.1c43.8,0,79.4-35.6,79.4-79.5V164.5    C400,120.7,364.3,85,320.5,85z M365.7,320.6c0,24.9-20.3,45.2-45.2,45.2H164.5c-24.9,0-45.2-20.3-45.2-45.2V164.5    c0-24.9,20.3-45.2,45.2-45.2h156.1c24.9,0,45.2,20.3,45.2,45.2V320.6z" />
+                                    <path d="M326.2,178.2c-10.6,0-19.2-8.6-19.2-19.2c0-10.6,8.6-19.2,19.2-19.2c10.6,0,19.2,8.6,19.2,19.2    C345.4,169.6,336.8,178.2,326.2,178.2L326.2,178.2z" />
+                                    <path d="M242.5,161.4c-44.7,0-81.1,36.4-81.1,81.1c0,44.7,36.4,81.1,81.1,81.1c44.7,0,81.1-36.4,81.1-81.1    C323.6,197.8,287.2,161.4,242.5,161.4z M242.5,289.4c-25.8,0-46.8-21-46.8-46.8c0-25.8,21-46.8,46.8-46.8    c25.8,0,46.8,21,46.8,46.8C289.3,268.4,268.3,289.4,242.5,289.4z" />
+                                 </g>
+                                 <path class="outer-shape" d="M0,0v485h485V0H0z M455,455H30V30h425V455z" />
+                              </g>
+                           </svg>
 					<li>Scroll down the list of options, then tap Add to Home Screen. 
 						<li>If you don't see Add to Home Screen, you can add it. Scroll down to the bottom of the list, tap Edit Actions, then tap Add to Home Screen.</>
                     
