--- a/branded.html
+++ b/branded.html
@@ -209,7 +209,7 @@ ga('ttuTracker.send', 'pageview');
 		       
 			<blockquote>
 				<ol class="default-list">
-					<li>While viewing the website, tap 
+					<li>While viewing the website on Safari, tap 
 
 <svg
    version="1.0"
@@ -263,8 +263,9 @@ ga('ttuTracker.send', 'pageview');
   </g>
 </svg> in the menu bar.</li>
 
-					<li>Scroll down the list of options, then tap Add to Home Screen. 
-						<li>If you don't see Add to Home Screen, you can add it. Scroll down to the bottom of the list, tap Edit Actions, then tap Add to Home Screen.</>
+					<li>Scroll down the list of options, then tap <i>Add to Home Screen</i>. </li>
+					<li>On the next prompt that appears, tap <i>Add</i> to confirm</li>
+						<li>If you don't see Add to Home Screen, you can add it. Scroll down to the bottom of the list, tap <i>Edit Actions</i>, then tap <i>Add to Home Screen</i>,i>.</>
                     
 				</ol>
                      </blockquote>
