--- a/branded.html
+++ b/branded.html
@@ -263,9 +263,9 @@ ga('ttuTracker.send', 'pageview');
   </g>
 </svg> in the menu bar.</li>
 
-					<li>Scroll down the list of options, then tap <i>Add to Home Screen</i>. </li>
-					<li>On the next prompt that appears, tap <i>Add</i> to confirm</li>
-						<li>If you don't see Add to Home Screen, you can add it. Scroll down to the bottom of the list, tap <i>Edit Actions</i>, then tap <i>Add to Home Screen</i>,i>.</>
+					<li>Scroll down the list of options, then tap <b>Add to Home Screen</b>. </li>
+					<li>On the next prompt that appears, tap <b>Add</b> to confirm</li>
+						<li>If you don't see Add to Home Screen, you can add it. Scroll down to the bottom of the list, tap <b>Edit Actions</b>, then tap <b>Add to Home Screen</b>
                     
 				</ol>
                      </blockquote>
@@ -282,7 +282,7 @@ ga('ttuTracker.send', 'pageview');
 						Navigate to the website or web page you want to pin to your home screen.
 					</li>
 					<li>
-						Tap the menu icon (3 dots in upper right-hand corner) and tap Add to homescreen.
+						Tap the menu icon (3 dots in upper right-hand corner) and tap <b>Add to homescreen</b>.
 					</li>
 					<li>
 						Choose a name for the website shortcut, then Chrome will add it to your home screen.
