--- a/branded.html
+++ b/branded.html
@@ -178,9 +178,9 @@ ga('ttuTracker.send', 'pageview');
       <section class="breadcrumb">
          <ul class="breadcrumbs">
             
-            <li class="breadcrumbs-item test"><a href="http://www.ttu.edu/" class="text-center icon-home">TTU</a></li> 
+            <li class="breadcrumbs-item test"><a href="http://www.ttu.edu/">TTU</a></li> 
             <li class="breadcrumbs-item test"><a href="https://www.depts.ttu.edu/vetschool/">TTU SVM</a></li> 
-            <li class="breadcrumbs-item"><a href="#">Professional Partners Dashboard</a></li> 
+            <li class="breadcrumbs-item test"><a href="#"  class="text-center icon-home">Professional Partners Dashboard</a></li> 
            
          </ul>
       </section>
