--- a/branded.html
+++ b/branded.html
@@ -836,8 +836,10 @@
           </ul>
         </li>
         <div class="l-ttunav is-hidden"><label class="c-page-header__title">Additional Resources</label>
+           <a href="https://www.depts.ttu.edu/vetschool/about/meet-our-team/index.php">TTU SVM Directory</a>
+          <a href="https://www.depts.ttu.edu/vetschool/" alt="TTU SVM Home" title="TTU SVM Home">TTU SVM Home</a>
           <a href="http://www.ttu.edu/" alt="TTU Home" title="TTU Home">TTU Home</a>
-          <a href="http://directory.texastech.edu/" tabindex="2" aria-label="TTU System Online Directory">Directory</a>
+          <a href="http://directory.texastech.edu/" tabindex="2" aria-label="TTU System Online Directory">TTU Directory</a>
           <a href="http://raiderlink.ttu.edu/" tabindex="3" aria-label="Raiderlink">Raiderlink</a>
           <a href="http://www.ttu.edu/site/" tabindex="4" aria-label="Site Index">A-Z Index</a>
         </div>
