--- a/branded.html
+++ b/branded.html
@@ -520,7 +520,7 @@
           </ul>
         </li>
         <li class="has-children ">
-          <a href="#">Academics</a>
+          <a href="#">DVM Program</a>
           <ul class="ttu-secondary-nav is-hidden">
             <div class="c-page-header__mobile">
               <label class="c-page-header__title moves-out"> School <em>of</em> Veterinary Medicine </label>
@@ -528,7 +528,7 @@
             <li class="go-back"><a href="#0">Back</a></li>
             <li class="has-children ">
               <a href="https://www.depts.ttu.edu/vetschool/academics/dvm-program/index.php">DVM Program</a>
-              <ul class="is-hidden ">
+
                 <div class="c-page-header__mobile">
                   <label class="c-page-header__title moves-out"> School <em>of</em> Veterinary Medicine <br>
                   <span class="title--location">DVM Program</span>
@@ -542,7 +542,7 @@
                 <li><a href="https://www.depts.ttu.edu/vetschool/academics/dvm-program/class-schedule/index.php">Class Schedules</a></li>
                 <li><a href="https://www.depts.ttu.edu/vetschool/academics/dvm-program/incoming-students/index.php">Required Items</a></li>
                 <li><a href="https://www.depts.ttu.edu/vetschool/academics/dvm-program/raidervet-competencies.pdf">RaiderVet New Graduate Competencies</a></li>
-              </ul>
+
             </li>
            
 
