--- a/branded.html
+++ b/branded.html
@@ -542,18 +542,30 @@
 
               </ul>
             </li>
+            <ul class="is-hidden ">
+                     <div class="c-page-header__mobile">
+                        <label class="c-page-header__title moves-out"> School <em>of</em> Veterinary Medicine <br>
+                           <span class="title--location">Directory</span>
+                           </label>
+                        </div>
+                     <li class="go-back"><a href="#0">Back</a></li>
+                     
+                     <li><a href="https://www.depts.ttu.edu/vetschool/about/meet-our-team/faculty/index.php">Faculty</a></li>
+                     <li><a href="https://www.depts.ttu.edu/vetschool/about/meet-our-team/staff/index.php">Staff</a></li>
+                  </ul>
+               </li>
           </ul>
         </li>
         
         <li class="has-children ">
-          <a href="#">Clinical Year</a>
+          <a href="#">Academics</a>
           <ul class="ttu-secondary-nav is-hidden">
             <div class="c-page-header__mobile">
               <label class="c-page-header__title moves-out"> School <em>of</em> Veterinary Medicine </label>
             </div>
             <li class="go-back"><a href="#0">Back</a></li>
          <li class="has-children ">
-              <a href="https://www.depts.ttu.edu/vetschool/academics/clinical-year/index.php">Acedemics</a>
+              <a href="https://www.depts.ttu.edu/vetschool/academics/clinical-year/index.php">Clinical Year</a>
               <ul class="is-hidden ">
                 <div class="c-page-header__mobile">
                   <label class="c-page-header__title moves-out"> School <em>of</em> Veterinary Medicine <br>
