--- a/branded.html
+++ b/branded.html
@@ -549,7 +549,8 @@
                            </label>
                         </div>
                      <li class="go-back"><a href="#0">Back</a></li>
-                     
+                                 <li class="has-children ">
+              <a href="https://www.depts.ttu.edu/vetschool/academics/important-contacts/index.php">Directory</a>
                      <li><a href="https://www.depts.ttu.edu/vetschool/about/meet-our-team/faculty/index.php">Faculty</a></li>
                      <li><a href="https://www.depts.ttu.edu/vetschool/about/meet-our-team/staff/index.php">Staff</a></li>
                   </ul>
