--- a/branded.html
+++ b/branded.html
@@ -529,7 +529,7 @@
             </div>
             <li class="go-back"><a href="#0">Back</a></li>
             <li class="has-children ">
-              <a href="https://www.depts.ttu.edu/vetschool/academics/important-contacts/index.php">Contacts</a>
+              <a href="#">Contacts</a>
               <ul class="is-hidden ">
                 <div class="c-page-header__mobile">
                   <label class="c-page-header__title moves-out"> School <em>of</em> Veterinary Medicine <br>
@@ -542,15 +542,17 @@
 
               </ul>
             </li>
-            <ul class="is-hidden ">
-                     <div class="c-page-header__mobile">
-                        <label class="c-page-header__title moves-out"> School <em>of</em> Veterinary Medicine <br>
-                           <span class="title--location">Directory</span>
-                           </label>
-                        </div>
-                     <li class="go-back"><a href="#0">Back</a></li>
+         <li class="has-children ">
+              <a href="#">Directory</a>
+              <ul class="is-hidden ">
+                <div class="c-page-header__mobile">
+                  <label class="c-page-header__title moves-out"> School <em>of</em> Veterinary Medicine <br>
+                  <span class="title--location">Directory</span>
+                  </label>
+                </div>
+                <li class="go-back"><a href="#0">Back</a></li>
                                  <li class="has-children ">
-              <a href="https://www.depts.ttu.edu/vetschool/academics/important-contacts/index.php">Directory</a>
+              <a href="#">Directory</a>
                      <li><a href="https://www.depts.ttu.edu/vetschool/about/meet-our-team/faculty/index.php">Faculty</a></li>
                      <li><a href="https://www.depts.ttu.edu/vetschool/about/meet-our-team/staff/index.php">Staff</a></li>
                   </ul>
