--- a/branded.html
+++ b/branded.html
@@ -522,18 +522,18 @@
        
         
         <li class="has-children ">
-          <a href="#">Contact</a>
+          <a href="#">Contacts</a>
           <ul class="ttu-secondary-nav is-hidden">
             <div class="c-page-header__mobile">
               <label class="c-page-header__title moves-out"> School <em>of</em> Veterinary Medicine </label>
             </div>
             <li class="go-back"><a href="#0">Back</a></li>
              <li class="has-children ">
-              <a href="#">Inquire</a>
+              <a href="#">Message / Inquire</a>
               <ul class="is-hidden ">
                 <div class="c-page-header__mobile">
                   <label class="c-page-header__title moves-out"> School <em>of</em> Veterinary Medicine <br>
-                  <span class="title--location">Inquire</span>
+                  <span class="title--location">Message / Inquire</span>
                   </label>
                 </div>
                 <li class="go-back"><a href="#0">Back</a></li>
